Code style improvements